src/syntax_analysis/parser.output
Terminals unused in grammar

    "as"
    "bool"
    "compeval"
    "define"
    "else"
    "elsif"
    "export"
    "for"
    "if"
    "import"
    "int"
    "match"
    "module"
    "new"
    "operator"
    "public"
    "pure"
    "range"
    "requires"
    "return"
    "static"
    "struct"
    "type"
    "typeset"
    "where"
    "while"
    "with"
    "::"
    "--"
    "++"


Grammar

    0 $accept: start $end

    1 start: declarations

    2 declarations: declarations declaration
    3             | ε

    4 declaration: variable-declaration
    5            | function-declaration

    6 variable-declaration: "let" IDENTIFIER ";"
    7                     | "let" IDENTIFIER ":" type ";"
    8                     | "let" IDENTIFIER "=" expression ";"
    9                     | "let" IDENTIFIER ":" type "=" expression ";"

   10 type: simple-type
   11     | type "&"
   12     | type "*"
   13     | type "[" "]"
   14     | type "*" "mutable"
   15     | type "[" "]" "mutable"

   16 simple-type: TYPE_NAME
   17            | TYPE_NAME "mutable"
   18            | "typeof" "(" expression ")"
   19            | "typeof" "(" expression ")" "mutable"

   20 function-declaration: "let" IDENTIFIER "(" function-parameter-list-opt ")" return-type-opt "=" compound-statement

   21 function-parameter-list-opt: function-parameter-list
   22                            | ε

   23 function-parameter-list: function-parameter
   24                        | function-parameter-list "," function-parameter

   25 function-parameter: IDENTIFIER
   26                   | IDENTIFIER ":" mode
   27                   | IDENTIFIER ":" type
   28                   | IDENTIFIER ":" mode type

   29 mode: "in"
   30     | "out"
   31     | "in" "out"
   32     | "move"

   33 return-type-opt: return-type
   34                | ε

   35 return-type: "->" type

   36 statements: statements statement
   37           | ε

   38 statement: expression ";"
   39          | assignment-statement
   40          | compound-statement
   41          | declaration

   42 assignment-statement: expression "=" expression ";"
   43                     | expression "<-" expression ";"
   44                     | expression "+=" expression ";"
   45                     | expression "-=" expression ";"
   46                     | expression "*=" expression ";"
   47                     | expression "%=" expression ";"
   48                     | expression "/=" expression ";"
   49                     | expression "//=" expression ";"
   50                     | expression "^=" expression ";"

   51 compound-statement: "{" statements "}"

   52 expression: primary-exression
   53           | binary-expression
   54           | unary-expression
   55           | absolute-value-expression
   56           | function-call-expression
   57           | array-index-expression

   58 primary-exression: literal
   59                  | "(" expression ")"

   60 literal: CHARACTER
   61        | COMPLEX
   62        | FLOAT
   63        | IDENTIFIER
   64        | INTEGER
   65        | STRING
   66        | "true"
   67        | "false"
   68        | "this"

   69 binary-expression: expression "or" expression
   70                  | expression "and" expression
   71                  | expression "==" expression
   72                  | expression "!=" expression
   73                  | expression "<" expression
   74                  | expression "<=" expression
   75                  | expression ">" expression
   76                  | expression ">=" expression
   77                  | expression "<=>" expression
   78                  | expression "+" expression
   79                  | expression "-" expression
   80                  | expression "*" expression
   81                  | expression "/" expression
   82                  | expression "//" expression
   83                  | expression "%" expression
   84                  | expression "^" expression
   85                  | expression "." expression

   86 unary-expression: expression "!"
   87                 | "not" expression
   88                 | "-" expression

   89 absolute-value-expression: "|" expression "|"

   90 function-call-expression: IDENTIFIER "(" expression-list-opt ")"
   91                         | function-call-expression "(" expression-list-opt ")"

   92 array-index-expression: IDENTIFIER "[" expression "]"
   93                       | function-call-expression "[" expression "]"
   94                       | array-index-expression "[" expression "]"

   95 expression-list-opt: expression-list
   96                    | ε

   97 expression-list: expression
   98                | expression-list "," expression


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    INTEGER <std::string_view> (258) 64
    FLOAT <std::string_view> (259) 62
    COMPLEX <std::string_view> (260) 61
    CHARACTER <std::string_view> (261) 60
    STRING <std::string_view> (262) 65
    IDENTIFIER <std::string_view> (263) 6 7 8 9 20 25 26 27 28 63 90 92
    TYPE_NAME <std::string_view> (264) 16 17
    "as" (265)
    "&" (266) 11
    "and" (267) 70
    "bool" (268)
    "compeval" (269)
    "define" (270)
    "else" (271)
    "elsif" (272)
    "export" (273)
    "false" (274) 67
    "for" (275)
    "if" (276)
    "import" (277)
    "in" (278) 29 31
    "int" (279)
    "let" (280) 6 7 8 9 20
    "match" (281)
    "module" (282)
    "move" (283) 32
    "mutable" (284) 14 15 17 19
    "new" (285)
    "not" (286) 87
    "operator" (287)
    "or" (288) 69
    "out" (289) 30 31
    "public" (290)
    "pure" (291)
    "range" (292)
    "requires" (293)
    "return" (294)
    "static" (295)
    "struct" (296)
    "this" (297) 68
    "true" (298) 66
    "type" (299)
    "typeof" (300) 18 19
    "typeset" (301)
    "where" (302)
    "while" (303)
    "with" (304)
    ":" (305) 7 9 26 27 28
    "::" (306)
    "{" (307) 51
    "[" (308) 13 15 92 93 94
    "(" (309) 18 19 20 59 90 91
    "}" (310) 51
    "]" (311) 13 15 92 93 94
    ")" (312) 18 19 20 59 90 91
    ";" (313) 6 7 8 9 38 42 43 44 45 46 47 48 49 50
    "=" (314) 8 9 20 42
    "!" (315) 86
    "!=" (316) 72
    "^" (317) 84
    "^=" (318) 50
    "," (319) 24 98
    "." (320) 85
    "==" (321) 71
    ">" (322) 75
    ">=" (323) 76
    "<-" (324) 43
    "<" (325) 73
    "<=" (326) 74
    "->" (327) 35
    "-" (328) 79 88
    "-=" (329) 45
    "--" (330)
    "%" (331) 83
    "%=" (332) 47
    "|" (333) 89
    "+" (334) 78
    "+=" (335) 44
    "++" (336)
    "/" (337) 81
    "/=" (338) 48
    "//" (339) 82
    "//=" (340) 49
    "<=>" (341) 77
    "*" (342) 12 14 80
    "*=" (343) 46


Nonterminals, with rules where they appear

    $accept (89)
        on left: 0
    start (90)
        on left: 1
        on right: 0
    declarations (91)
        on left: 2 3
        on right: 1 2
    declaration <std::size_t> (92)
        on left: 4 5
        on right: 2 41
    variable-declaration <std::size_t> (93)
        on left: 6 7 8 9
        on right: 4
    type <std::size_t> (94)
        on left: 10 11 12 13 14 15
        on right: 7 9 11 12 13 14 15 27 28 35
    simple-type <std::size_t> (95)
        on left: 16 17 18 19
        on right: 10
    function-declaration <std::size_t> (96)
        on left: 20
        on right: 5
    function-parameter-list-opt <std::vector<std::size_t>> (97)
        on left: 21 22
        on right: 20
    function-parameter-list <std::vector<std::size_t>> (98)
        on left: 23 24
        on right: 21 24
    function-parameter <std::size_t> (99)
        on left: 25 26 27 28
        on right: 23 24
    mode <syntax_nodes::function_parameter_attributes::attribute> (100)
        on left: 29 30 31 32
        on right: 26 28
    return-type-opt <std::size_t> (101)
        on left: 33 34
        on right: 20
    return-type <std::size_t> (102)
        on left: 35
        on right: 33
    statements <std::vector<std::size_t>> (103)
        on left: 36 37
        on right: 36 51
    statement <std::size_t> (104)
        on left: 38 39 40 41
        on right: 36
    assignment-statement <std::size_t> (105)
        on left: 42 43 44 45 46 47 48 49 50
        on right: 39
    compound-statement <std::size_t> (106)
        on left: 51
        on right: 20 40
    expression <std::size_t> (107)
        on left: 52 53 54 55 56 57
        on right: 8 9 18 19 38 42 43 44 45 46 47 48 49 50 59 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 92 93 94 97 98
    primary-exression <std::size_t> (108)
        on left: 58 59
        on right: 52
    literal <std::size_t> (109)
        on left: 60 61 62 63 64 65 66 67 68
        on right: 58
    binary-expression <std::size_t> (110)
        on left: 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85
        on right: 53
    unary-expression <std::size_t> (111)
        on left: 86 87 88
        on right: 54
    absolute-value-expression <std::size_t> (112)
        on left: 89
        on right: 55
    function-call-expression <std::size_t> (113)
        on left: 90 91
        on right: 56 91 93
    array-index-expression <std::size_t> (114)
        on left: 92 93 94
        on right: 57 94
    expression-list-opt <std::vector<std::size_t>> (115)
        on left: 95 96
        on right: 90 91
    expression-list <std::vector<std::size_t>> (116)
        on left: 97 98
        on right: 95 98


State 0

    0 $accept: • start $end

    $default  reduce using rule 3 (declarations)

    start         go to state 1
    declarations  go to state 2


State 1

    0 $accept: start • $end

    $end  shift, and go to state 3


State 2

    1 start: declarations •
    2 declarations: declarations • declaration

    "let"  shift, and go to state 4

    $default  reduce using rule 1 (start)

    declaration           go to state 5
    variable-declaration  go to state 6
    function-declaration  go to state 7


State 3

    0 $accept: start $end •

    $default  accept


State 4

    6 variable-declaration: "let" • IDENTIFIER ";"
    7                     | "let" • IDENTIFIER ":" type ";"
    8                     | "let" • IDENTIFIER "=" expression ";"
    9                     | "let" • IDENTIFIER ":" type "=" expression ";"
   20 function-declaration: "let" • IDENTIFIER "(" function-parameter-list-opt ")" return-type-opt "=" compound-statement

    IDENTIFIER  shift, and go to state 8


State 5

    2 declarations: declarations declaration •

    $default  reduce using rule 2 (declarations)


State 6

    4 declaration: variable-declaration •

    $default  reduce using rule 4 (declaration)


State 7

    5 declaration: function-declaration •

    $default  reduce using rule 5 (declaration)


State 8

    6 variable-declaration: "let" IDENTIFIER • ";"
    7                     | "let" IDENTIFIER • ":" type ";"
    8                     | "let" IDENTIFIER • "=" expression ";"
    9                     | "let" IDENTIFIER • ":" type "=" expression ";"
   20 function-declaration: "let" IDENTIFIER • "(" function-parameter-list-opt ")" return-type-opt "=" compound-statement

    ":"  shift, and go to state 9
    "("  shift, and go to state 10
    ";"  shift, and go to state 11
    "="  shift, and go to state 12


State 9

    7 variable-declaration: "let" IDENTIFIER ":" • type ";"
    9                     | "let" IDENTIFIER ":" • type "=" expression ";"

    TYPE_NAME  shift, and go to state 13
    "typeof"   shift, and go to state 14

    type         go to state 15
    simple-type  go to state 16


State 10

   20 function-declaration: "let" IDENTIFIER "(" • function-parameter-list-opt ")" return-type-opt "=" compound-statement

    IDENTIFIER  shift, and go to state 17

    $default  reduce using rule 22 (function-parameter-list-opt)

    function-parameter-list-opt  go to state 18
    function-parameter-list      go to state 19
    function-parameter           go to state 20


State 11

    6 variable-declaration: "let" IDENTIFIER ";" •

    $default  reduce using rule 6 (variable-declaration)


State 12

    8 variable-declaration: "let" IDENTIFIER "=" • expression ";"

    INTEGER     shift, and go to state 21
    FLOAT       shift, and go to state 22
    COMPLEX     shift, and go to state 23
    CHARACTER   shift, and go to state 24
    STRING      shift, and go to state 25
    IDENTIFIER  shift, and go to state 26
    "false"     shift, and go to state 27
    "not"       shift, and go to state 28
    "this"      shift, and go to state 29
    "true"      shift, and go to state 30
    "("         shift, and go to state 31
    "-"         shift, and go to state 32
    "|"         shift, and go to state 33

    expression                 go to state 34
    primary-exression          go to state 35
    literal                    go to state 36
    binary-expression          go to state 37
    unary-expression           go to state 38
    absolute-value-expression  go to state 39
    function-call-expression   go to state 40
    array-index-expression     go to state 41


State 13

   16 simple-type: TYPE_NAME •
   17            | TYPE_NAME • "mutable"

    "mutable"  shift, and go to state 42

    $default  reduce using rule 16 (simple-type)


State 14

   18 simple-type: "typeof" • "(" expression ")"
   19            | "typeof" • "(" expression ")" "mutable"

    "("  shift, and go to state 43


State 15

    7 variable-declaration: "let" IDENTIFIER ":" type • ";"
    9                     | "let" IDENTIFIER ":" type • "=" expression ";"
   11 type: type • "&"
   12     | type • "*"
   13     | type • "[" "]"
   14     | type • "*" "mutable"
   15     | type • "[" "]" "mutable"

    "&"  shift, and go to state 44
    "["  shift, and go to state 45
    ";"  shift, and go to state 46
    "="  shift, and go to state 47
    "*"  shift, and go to state 48


State 16

   10 type: simple-type •

    $default  reduce using rule 10 (type)


State 17

   25 function-parameter: IDENTIFIER •
   26                   | IDENTIFIER • ":" mode
   27                   | IDENTIFIER • ":" type
   28                   | IDENTIFIER • ":" mode type

    ":"  shift, and go to state 49

    $default  reduce using rule 25 (function-parameter)


State 18

   20 function-declaration: "let" IDENTIFIER "(" function-parameter-list-opt • ")" return-type-opt "=" compound-statement

    ")"  shift, and go to state 50


State 19

   21 function-parameter-list-opt: function-parameter-list •
   24 function-parameter-list: function-parameter-list • "," function-parameter

    ","  shift, and go to state 51

    $default  reduce using rule 21 (function-parameter-list-opt)


State 20

   23 function-parameter-list: function-parameter •

    $default  reduce using rule 23 (function-parameter-list)


State 21

   64 literal: INTEGER •

    $default  reduce using rule 64 (literal)


State 22

   62 literal: FLOAT •

    $default  reduce using rule 62 (literal)


State 23

   61 literal: COMPLEX •

    $default  reduce using rule 61 (literal)


State 24

   60 literal: CHARACTER •

    $default  reduce using rule 60 (literal)


State 25

   65 literal: STRING •

    $default  reduce using rule 65 (literal)


State 26

   63 literal: IDENTIFIER •
   90 function-call-expression: IDENTIFIER • "(" expression-list-opt ")"
   92 array-index-expression: IDENTIFIER • "[" expression "]"

    "["  shift, and go to state 52
    "("  shift, and go to state 53

    $default  reduce using rule 63 (literal)


State 27

   67 literal: "false" •

    $default  reduce using rule 67 (literal)


State 28

   87 unary-expression: "not" • expression

    INTEGER     shift, and go to state 21
    FLOAT       shift, and go to state 22
    COMPLEX     shift, and go to state 23
    CHARACTER   shift, and go to state 24
    STRING      shift, and go to state 25
    IDENTIFIER  shift, and go to state 26
    "false"     shift, and go to state 27
    "not"       shift, and go to state 28
    "this"      shift, and go to state 29
    "true"      shift, and go to state 30
    "("         shift, and go to state 31
    "-"         shift, and go to state 32
    "|"         shift, and go to state 33

    expression                 go to state 54
    primary-exression          go to state 35
    literal                    go to state 36
    binary-expression          go to state 37
    unary-expression           go to state 38
    absolute-value-expression  go to state 39
    function-call-expression   go to state 40
    array-index-expression     go to state 41


State 29

   68 literal: "this" •

    $default  reduce using rule 68 (literal)


State 30

   66 literal: "true" •

    $default  reduce using rule 66 (literal)


State 31

   59 primary-exression: "(" • expression ")"

    INTEGER     shift, and go to state 21
    FLOAT       shift, and go to state 22
    COMPLEX     shift, and go to state 23
    CHARACTER   shift, and go to state 24
    STRING      shift, and go to state 25
    IDENTIFIER  shift, and go to state 26
    "false"     shift, and go to state 27
    "not"       shift, and go to state 28
    "this"      shift, and go to state 29
    "true"      shift, and go to state 30
    "("         shift, and go to state 31
    "-"         shift, and go to state 32
    "|"         shift, and go to state 33

    expression                 go to state 55
    primary-exression          go to state 35
    literal                    go to state 36
    binary-expression          go to state 37
    unary-expression           go to state 38
    absolute-value-expression  go to state 39
    function-call-expression   go to state 40
    array-index-expression     go to state 41


State 32

   88 unary-expression: "-" • expression

    INTEGER     shift, and go to state 21
    FLOAT       shift, and go to state 22
    COMPLEX     shift, and go to state 23
    CHARACTER   shift, and go to state 24
    STRING      shift, and go to state 25
    IDENTIFIER  shift, and go to state 26
    "false"     shift, and go to state 27
    "not"       shift, and go to state 28
    "this"      shift, and go to state 29
    "true"      shift, and go to state 30
    "("         shift, and go to state 31
    "-"         shift, and go to state 32
    "|"         shift, and go to state 33

    expression                 go to state 56
    primary-exression          go to state 35
    literal                    go to state 36
    binary-expression          go to state 37
    unary-expression           go to state 38
    absolute-value-expression  go to state 39
    function-call-expression   go to state 40
    array-index-expression     go to state 41


State 33

   89 absolute-value-expression: "|" • expression "|"

    INTEGER     shift, and go to state 21
    FLOAT       shift, and go to state 22
    COMPLEX     shift, and go to state 23
    CHARACTER   shift, and go to state 24
    STRING      shift, and go to state 25
    IDENTIFIER  shift, and go to state 26
    "false"     shift, and go to state 27
    "not"       shift, and go to state 28
    "this"      shift, and go to state 29
    "true"      shift, and go to state 30
    "("         shift, and go to state 31
    "-"         shift, and go to state 32
    "|"         shift, and go to state 33

    expression                 go to state 57
    primary-exression          go to state 35
    literal                    go to state 36
    binary-expression          go to state 37
    unary-expression           go to state 38
    absolute-value-expression  go to state 39
    function-call-expression   go to state 40
    array-index-expression     go to state 41


State 34

    8 variable-declaration: "let" IDENTIFIER "=" expression • ";"
   69 binary-expression: expression • "or" expression
   70                  | expression • "and" expression
   71                  | expression • "==" expression
   72                  | expression • "!=" expression
   73                  | expression • "<" expression
   74                  | expression • "<=" expression
   75                  | expression • ">" expression
   76                  | expression • ">=" expression
   77                  | expression • "<=>" expression
   78                  | expression • "+" expression
   79                  | expression • "-" expression
   80                  | expression • "*" expression
   81                  | expression • "/" expression
   82                  | expression • "//" expression
   83                  | expression • "%" expression
   84                  | expression • "^" expression
   85                  | expression • "." expression
   86 unary-expression: expression • "!"

    "and"  shift, and go to state 58
    "or"   shift, and go to state 59
    ";"    shift, and go to state 60
    "!"    shift, and go to state 61
    "!="   shift, and go to state 62
    "^"    shift, and go to state 63
    "."    shift, and go to state 64
    "=="   shift, and go to state 65
    ">"    shift, and go to state 66
    ">="   shift, and go to state 67
    "<"    shift, and go to state 68
    "<="   shift, and go to state 69
    "-"    shift, and go to state 70
    "%"    shift, and go to state 71
    "+"    shift, and go to state 72
    "/"    shift, and go to state 73
    "//"   shift, and go to state 74
    "<=>"  shift, and go to state 75
    "*"    shift, and go to state 76


State 35

   52 expression: primary-exression •

    $default  reduce using rule 52 (expression)


State 36

   58 primary-exression: literal •

    $default  reduce using rule 58 (primary-exression)


State 37

   53 expression: binary-expression •

    $default  reduce using rule 53 (expression)


State 38

   54 expression: unary-expression •

    $default  reduce using rule 54 (expression)


State 39

   55 expression: absolute-value-expression •

    $default  reduce using rule 55 (expression)


State 40

   56 expression: function-call-expression •
   91 function-call-expression: function-call-expression • "(" expression-list-opt ")"
   93 array-index-expression: function-call-expression • "[" expression "]"

    "["  shift, and go to state 77
    "("  shift, and go to state 78

    $default  reduce using rule 56 (expression)


State 41

   57 expression: array-index-expression •
   94 array-index-expression: array-index-expression • "[" expression "]"

    "["  shift, and go to state 79

    $default  reduce using rule 57 (expression)


State 42

   17 simple-type: TYPE_NAME "mutable" •

    $default  reduce using rule 17 (simple-type)


State 43

   18 simple-type: "typeof" "(" • expression ")"
   19            | "typeof" "(" • expression ")" "mutable"

    INTEGER     shift, and go to state 21
    FLOAT       shift, and go to state 22
    COMPLEX     shift, and go to state 23
    CHARACTER   shift, and go to state 24
    STRING      shift, and go to state 25
    IDENTIFIER  shift, and go to state 26
    "false"     shift, and go to state 27
    "not"       shift, and go to state 28
    "this"      shift, and go to state 29
    "true"      shift, and go to state 30
    "("         shift, and go to state 31
    "-"         shift, and go to state 32
    "|"         shift, and go to state 33

    expression                 go to state 80
    primary-exression          go to state 35
    literal                    go to state 36
    binary-expression          go to state 37
    unary-expression           go to state 38
    absolute-value-expression  go to state 39
    function-call-expression   go to state 40
    array-index-expression     go to state 41


State 44

   11 type: type "&" •

    $default  reduce using rule 11 (type)


State 45

   13 type: type "[" • "]"
   15     | type "[" • "]" "mutable"

    "]"  shift, and go to state 81


State 46

    7 variable-declaration: "let" IDENTIFIER ":" type ";" •

    $default  reduce using rule 7 (variable-declaration)


State 47

    9 variable-declaration: "let" IDENTIFIER ":" type "=" • expression ";"

    INTEGER     shift, and go to state 21
    FLOAT       shift, and go to state 22
    COMPLEX     shift, and go to state 23
    CHARACTER   shift, and go to state 24
    STRING      shift, and go to state 25
    IDENTIFIER  shift, and go to state 26
    "false"     shift, and go to state 27
    "not"       shift, and go to state 28
    "this"      shift, and go to state 29
    "true"      shift, and go to state 30
    "("         shift, and go to state 31
    "-"         shift, and go to state 32
    "|"         shift, and go to state 33

    expression                 go to state 82
    primary-exression          go to state 35
    literal                    go to state 36
    binary-expression          go to state 37
    unary-expression           go to state 38
    absolute-value-expression  go to state 39
    function-call-expression   go to state 40
    array-index-expression     go to state 41


State 48

   12 type: type "*" •
   14     | type "*" • "mutable"

    "mutable"  shift, and go to state 83

    $default  reduce using rule 12 (type)


State 49

   26 function-parameter: IDENTIFIER ":" • mode
   27                   | IDENTIFIER ":" • type
   28                   | IDENTIFIER ":" • mode type

    TYPE_NAME  shift, and go to state 13
    "in"       shift, and go to state 84
    "move"     shift, and go to state 85
    "out"      shift, and go to state 86
    "typeof"   shift, and go to state 14

    type         go to state 87
    simple-type  go to state 16
    mode         go to state 88


State 50

   20 function-declaration: "let" IDENTIFIER "(" function-parameter-list-opt ")" • return-type-opt "=" compound-statement

    "->"  shift, and go to state 89

    $default  reduce using rule 34 (return-type-opt)

    return-type-opt  go to state 90
    return-type      go to state 91


State 51

   24 function-parameter-list: function-parameter-list "," • function-parameter

    IDENTIFIER  shift, and go to state 17

    function-parameter  go to state 92


State 52

   92 array-index-expression: IDENTIFIER "[" • expression "]"

    INTEGER     shift, and go to state 21
    FLOAT       shift, and go to state 22
    COMPLEX     shift, and go to state 23
    CHARACTER   shift, and go to state 24
    STRING      shift, and go to state 25
    IDENTIFIER  shift, and go to state 26
    "false"     shift, and go to state 27
    "not"       shift, and go to state 28
    "this"      shift, and go to state 29
    "true"      shift, and go to state 30
    "("         shift, and go to state 31
    "-"         shift, and go to state 32
    "|"         shift, and go to state 33

    expression                 go to state 93
    primary-exression          go to state 35
    literal                    go to state 36
    binary-expression          go to state 37
    unary-expression           go to state 38
    absolute-value-expression  go to state 39
    function-call-expression   go to state 40
    array-index-expression     go to state 41


State 53

   90 function-call-expression: IDENTIFIER "(" • expression-list-opt ")"

    INTEGER     shift, and go to state 21
    FLOAT       shift, and go to state 22
    COMPLEX     shift, and go to state 23
    CHARACTER   shift, and go to state 24
    STRING      shift, and go to state 25
    IDENTIFIER  shift, and go to state 26
    "false"     shift, and go to state 27
    "not"       shift, and go to state 28
    "this"      shift, and go to state 29
    "true"      shift, and go to state 30
    "("         shift, and go to state 31
    "-"         shift, and go to state 32
    "|"         shift, and go to state 33

    $default  reduce using rule 96 (expression-list-opt)

    expression                 go to state 94
    primary-exression          go to state 35
    literal                    go to state 36
    binary-expression          go to state 37
    unary-expression           go to state 38
    absolute-value-expression  go to state 39
    function-call-expression   go to state 40
    array-index-expression     go to state 41
    expression-list-opt        go to state 95
    expression-list            go to state 96


State 54

   69 binary-expression: expression • "or" expression
   70                  | expression • "and" expression
   71                  | expression • "==" expression
   72                  | expression • "!=" expression
   73                  | expression • "<" expression
   74                  | expression • "<=" expression
   75                  | expression • ">" expression
   76                  | expression • ">=" expression
   77                  | expression • "<=>" expression
   78                  | expression • "+" expression
   79                  | expression • "-" expression
   80                  | expression • "*" expression
   81                  | expression • "/" expression
   82                  | expression • "//" expression
   83                  | expression • "%" expression
   84                  | expression • "^" expression
   85                  | expression • "." expression
   86 unary-expression: expression • "!"
   87                 | "not" expression •

    "!"  shift, and go to state 61
    "."  shift, and go to state 64

    $default  reduce using rule 87 (unary-expression)


State 55

   59 primary-exression: "(" expression • ")"
   69 binary-expression: expression • "or" expression
   70                  | expression • "and" expression
   71                  | expression • "==" expression
   72                  | expression • "!=" expression
   73                  | expression • "<" expression
   74                  | expression • "<=" expression
   75                  | expression • ">" expression
   76                  | expression • ">=" expression
   77                  | expression • "<=>" expression
   78                  | expression • "+" expression
   79                  | expression • "-" expression
   80                  | expression • "*" expression
   81                  | expression • "/" expression
   82                  | expression • "//" expression
   83                  | expression • "%" expression
   84                  | expression • "^" expression
   85                  | expression • "." expression
   86 unary-expression: expression • "!"

    "and"  shift, and go to state 58
    "or"   shift, and go to state 59
    ")"    shift, and go to state 97
    "!"    shift, and go to state 61
    "!="   shift, and go to state 62
    "^"    shift, and go to state 63
    "."    shift, and go to state 64
    "=="   shift, and go to state 65
    ">"    shift, and go to state 66
    ">="   shift, and go to state 67
    "<"    shift, and go to state 68
    "<="   shift, and go to state 69
    "-"    shift, and go to state 70
    "%"    shift, and go to state 71
    "+"    shift, and go to state 72
    "/"    shift, and go to state 73
    "//"   shift, and go to state 74
    "<=>"  shift, and go to state 75
    "*"    shift, and go to state 76


State 56

   69 binary-expression: expression • "or" expression
   70                  | expression • "and" expression
   71                  | expression • "==" expression
   72                  | expression • "!=" expression
   73                  | expression • "<" expression
   74                  | expression • "<=" expression
   75                  | expression • ">" expression
   76                  | expression • ">=" expression
   77                  | expression • "<=>" expression
   78                  | expression • "+" expression
   79                  | expression • "-" expression
   80                  | expression • "*" expression
   81                  | expression • "/" expression
   82                  | expression • "//" expression
   83                  | expression • "%" expression
   84                  | expression • "^" expression
   85                  | expression • "." expression
   86 unary-expression: expression • "!"
   88                 | "-" expression •

    "!"   shift, and go to state 61
    "^"   shift, and go to state 63
    "."   shift, and go to state 64
    "%"   shift, and go to state 71
    "/"   shift, and go to state 73
    "//"  shift, and go to state 74
    "*"   shift, and go to state 76

    $default  reduce using rule 88 (unary-expression)


State 57

   69 binary-expression: expression • "or" expression
   70                  | expression • "and" expression
   71                  | expression • "==" expression
   72                  | expression • "!=" expression
   73                  | expression • "<" expression
   74                  | expression • "<=" expression
   75                  | expression • ">" expression
   76                  | expression • ">=" expression
   77                  | expression • "<=>" expression
   78                  | expression • "+" expression
   79                  | expression • "-" expression
   80                  | expression • "*" expression
   81                  | expression • "/" expression
   82                  | expression • "//" expression
   83                  | expression • "%" expression
   84                  | expression • "^" expression
   85                  | expression • "." expression
   86 unary-expression: expression • "!"
   89 absolute-value-expression: "|" expression • "|"

    "and"  shift, and go to state 58
    "or"   shift, and go to state 59
    "!"    shift, and go to state 61
    "!="   shift, and go to state 62
    "^"    shift, and go to state 63
    "."    shift, and go to state 64
    "=="   shift, and go to state 65
    ">"    shift, and go to state 66
    ">="   shift, and go to state 67
    "<"    shift, and go to state 68
    "<="   shift, and go to state 69
    "-"    shift, and go to state 70
    "%"    shift, and go to state 71
    "|"    shift, and go to state 98
    "+"    shift, and go to state 72
    "/"    shift, and go to state 73
    "//"   shift, and go to state 74
    "<=>"  shift, and go to state 75
    "*"    shift, and go to state 76


State 58

   70 binary-expression: expression "and" • expression

    INTEGER     shift, and go to state 21
    FLOAT       shift, and go to state 22
    COMPLEX     shift, and go to state 23
    CHARACTER   shift, and go to state 24
    STRING      shift, and go to state 25
    IDENTIFIER  shift, and go to state 26
    "false"     shift, and go to state 27
    "not"       shift, and go to state 28
    "this"      shift, and go to state 29
    "true"      shift, and go to state 30
    "("         shift, and go to state 31
    "-"         shift, and go to state 32
    "|"         shift, and go to state 33

    expression                 go to state 99
    primary-exression          go to state 35
    literal                    go to state 36
    binary-expression          go to state 37
    unary-expression           go to state 38
    absolute-value-expression  go to state 39
    function-call-expression   go to state 40
    array-index-expression     go to state 41


State 59

   69 binary-expression: expression "or" • expression

    INTEGER     shift, and go to state 21
    FLOAT       shift, and go to state 22
    COMPLEX     shift, and go to state 23
    CHARACTER   shift, and go to state 24
    STRING      shift, and go to state 25
    IDENTIFIER  shift, and go to state 26
    "false"     shift, and go to state 27
    "not"       shift, and go to state 28
    "this"      shift, and go to state 29
    "true"      shift, and go to state 30
    "("         shift, and go to state 31
    "-"         shift, and go to state 32
    "|"         shift, and go to state 33

    expression                 go to state 100
    primary-exression          go to state 35
    literal                    go to state 36
    binary-expression          go to state 37
    unary-expression           go to state 38
    absolute-value-expression  go to state 39
    function-call-expression   go to state 40
    array-index-expression     go to state 41


State 60

    8 variable-declaration: "let" IDENTIFIER "=" expression ";" •

    $default  reduce using rule 8 (variable-declaration)


State 61

   86 unary-expression: expression "!" •

    $default  reduce using rule 86 (unary-expression)


State 62

   72 binary-expression: expression "!=" • expression

    INTEGER     shift, and go to state 21
    FLOAT       shift, and go to state 22
    COMPLEX     shift, and go to state 23
    CHARACTER   shift, and go to state 24
    STRING      shift, and go to state 25
    IDENTIFIER  shift, and go to state 26
    "false"     shift, and go to state 27
    "not"       shift, and go to state 28
    "this"      shift, and go to state 29
    "true"      shift, and go to state 30
    "("         shift, and go to state 31
    "-"         shift, and go to state 32
    "|"         shift, and go to state 33

    expression                 go to state 101
    primary-exression          go to state 35
    literal                    go to state 36
    binary-expression          go to state 37
    unary-expression           go to state 38
    absolute-value-expression  go to state 39
    function-call-expression   go to state 40
    array-index-expression     go to state 41


State 63

   84 binary-expression: expression "^" • expression

    INTEGER     shift, and go to state 21
    FLOAT       shift, and go to state 22
    COMPLEX     shift, and go to state 23
    CHARACTER   shift, and go to state 24
    STRING      shift, and go to state 25
    IDENTIFIER  shift, and go to state 26
    "false"     shift, and go to state 27
    "not"       shift, and go to state 28
    "this"      shift, and go to state 29
    "true"      shift, and go to state 30
    "("         shift, and go to state 31
    "-"         shift, and go to state 32
    "|"         shift, and go to state 33

    expression                 go to state 102
    primary-exression          go to state 35
    literal                    go to state 36
    binary-expression          go to state 37
    unary-expression           go to state 38
    absolute-value-expression  go to state 39
    function-call-expression   go to state 40
    array-index-expression     go to state 41


State 64

   85 binary-expression: expression "." • expression

    INTEGER     shift, and go to state 21
    FLOAT       shift, and go to state 22
    COMPLEX     shift, and go to state 23
    CHARACTER   shift, and go to state 24
    STRING      shift, and go to state 25
    IDENTIFIER  shift, and go to state 26
    "false"     shift, and go to state 27
    "not"       shift, and go to state 28
    "this"      shift, and go to state 29
    "true"      shift, and go to state 30
    "("         shift, and go to state 31
    "-"         shift, and go to state 32
    "|"         shift, and go to state 33

    expression                 go to state 103
    primary-exression          go to state 35
    literal                    go to state 36
    binary-expression          go to state 37
    unary-expression           go to state 38
    absolute-value-expression  go to state 39
    function-call-expression   go to state 40
    array-index-expression     go to state 41


State 65

   71 binary-expression: expression "==" • expression

    INTEGER     shift, and go to state 21
    FLOAT       shift, and go to state 22
    COMPLEX     shift, and go to state 23
    CHARACTER   shift, and go to state 24
    STRING      shift, and go to state 25
    IDENTIFIER  shift, and go to state 26
    "false"     shift, and go to state 27
    "not"       shift, and go to state 28
    "this"      shift, and go to state 29
    "true"      shift, and go to state 30
    "("         shift, and go to state 31
    "-"         shift, and go to state 32
    "|"         shift, and go to state 33

    expression                 go to state 104
    primary-exression          go to state 35
    literal                    go to state 36
    binary-expression          go to state 37
    unary-expression           go to state 38
    absolute-value-expression  go to state 39
    function-call-expression   go to state 40
    array-index-expression     go to state 41


State 66

   75 binary-expression: expression ">" • expression
